Added text overlay for vote modal #2

--- a/index.html
+++ b/index.html
@@ -154,25 +154,29 @@
   </div>
   <hr width="600" size="200" class="horizontalOne">
   <h1 class="voteday">Vote of the day</h1>
-  <!--Vote square section-->
+  <!--Vote for car section-->
   <div class="container votesection">
     <div class="row votesquares">
       <div class="col-sm-6">
         <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalOne" id="firstModal">
         <div class="squareOne">
-          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458"></div>
-          <p class="italiastyle">Ferrari 458 Italia</p>
-        </div>
-        <div class="modal modalOne" tabindex="-1" role="dialog">
-          <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="modalLabel">Modal Title.</h4>
-              </div>
-              <div class="modal-body"><h4>Thank you for voting!</h4></div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default">Close</button></a>
+          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458">
+            <div class="italiastyle">
+              <h2>Ferrari 458 Italia</h2>
+              <p class="voteitalia">Click to Vote!</p>
+            </div>
+            <div class="modal modalOne" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Modal Title</h4>
+                  </div>
+                  <div class="modal-body"><h4>Thank you for voting!</h4></div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default">Close</button></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -181,19 +185,23 @@
       <div class="col-sm-6">
         <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalTwo" id="secondModal">
         <div class="squareTwo">
-          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr"></div>
-          <p class="gtrstyle">Nissan R35 GT-R</p>
-        </div>
-        <div class="modal modalTwo" tabindex="-1" role="dialog">
-          <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Modal Title</h4>
-              </div>
-              <div class="modal-body">Thank you for voting!</h4></div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default">Close</button></a>
+          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr">
+            <div class="gtrstyle">
+              <h2>Nissan R35 GT-R</h2>
+              <p class="votegtr">Click to vote!</p>
+            </div>
+            <div class="modal modalTwo" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Modal Title</h4>
+                  </div>
+                  <div class="modal-body"><h4>Thanks for Voting!</h4></div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default">Close</button></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -237,7 +245,7 @@
       <div class="col-sm-4">
         <div class="box">
           <div class="overlay">
-            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+            <span class="plus"><p>Alias:Robot<br>Car:Infiniti G37<br>Mods:<br>W/L:</p></span>
           </div>
         </div>
       </div>
