Added text overlay for build vote section #2

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
       <div class="col-sm-6">
         <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalOne" id="firstModal">
         <div class="squareOne">
-          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458">
+          <div class="vote1">
+            <img src="images/libertywalk458.jpg" class="img-responsive italia458">
             <div class="italiastyle">
               <h2>Ferrari 458 Italia</h2>
               <p class="voteitalia">Click to Vote!</p>
@@ -185,7 +186,8 @@
       <div class="col-sm-6">
         <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalTwo" id="secondModal">
         <div class="squareTwo">
-          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr">
+          <div class="vote2">
+            <img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr">
             <div class="gtrstyle">
               <h2>Nissan R35 GT-R</h2>
               <p class="votegtr">Click to vote!</p>
@@ -240,26 +242,32 @@
   <div class="container">
     <div class="row">
       <h1 class="topracers">Top Racers</h1>
-    </div>
+    </div>  
     <div class="row scoreboard">
       <div class="col-sm-4">
-        <div class="box">
-          <div class="overlay">
-            <span class="plus"><p>Alias:Robot<br>Car:Infiniti G37<br>Mods:<br>W/L:</p></span>
+        <div class="statsOne">
+          <img src="images/libertywalkg37.jpg" class="img-responsive">
+          <div class="g37Style">
+            <h3>Stats</h3>
+            <p class="viewOne">Ghost<br>Car: INFINITI G37<br>Tune: Stage 3<br>W/L: 16/2<br></p>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="box">
-          <div class="overlay">
-            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+        <div class="statsTwo">
+          <img src="images/gtrstatpic.jpg" class="img-responsive gtrstat">
+          <div class="m4Style">
+            <h3>Stats</h3>
+            <p class="viewTwo">Bob<br>Car: BMW M4<br>Tune: Stage 3<br>W/L: 14/3<br></p>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="box">
-          <div class="overlay">
-            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+        <div class="statsThree">
+          <img src="images/libertywalkporsche.jpg" class="img-responsive">
+          <div class="carStyle">
+            <h3>Stats</h3>
+            <p class="viewThree">Speedy<br>Car: PORSCHE 911 GT4<br>Tune: Stage 3<br>W/L: 12/5<br></p>
           </div>
         </div>
       </div>
