#2 Updated vote section with on hover overlays

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       </div>
     </div>
   </div>
+  <!--Sponsor logo section-->
   <div class="container">
     <div class="row sponsors1">
       <div class="col-sm-4">
@@ -153,7 +154,7 @@
     </div>
   </div>
   <hr width="600" size="200" class="horizontalOne">
-  <h1 class="voteday">Vote of the day</h1>
+  <img src="images/voteoftheday.png" class="img-responsive center-block voteday">
   <!--Vote for car section-->
   <div class="container votesection">
     <div class="row votesquares">
@@ -164,16 +165,12 @@
             <img src="images/libertywalk458.jpg" class="img-responsive italia458">
             <div class="italiastyle">
               <h2>Ferrari 458 Italia</h2>
-              <p class="voteitalia">Click to Vote!</p>
+              <p class="voteitalia">Vote<span><i class="fa fa-check fa-1x"></i>
             </div>
             <div class="modal modalOne" tabindex="-1" role="dialog">
               <div class="modal-dialog modal-sm">
                 <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Modal Title</h4>
-                  </div>
-                  <div class="modal-body"><h4>Thank you for voting!</h4></div>
+                  <div class="modal-body"><h4>Thanks for voting!</h4></div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default">Close</button></a>
                   </div>
@@ -190,15 +187,11 @@
             <img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr">
             <div class="gtrstyle">
               <h2>Nissan R35 GT-R</h2>
-              <p class="votegtr">Click to vote!</p>
+              <p class="voteitalia">Vote<span><i class="fa fa-check fa-1x"></i>
             </div>
             <div class="modal modalTwo" tabindex="-1" role="dialog">
               <div class="modal-dialog modal-sm">
                 <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Modal Title</h4>
-                  </div>
                   <div class="modal-body"><h4>Thanks for Voting!</h4></div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default">Close</button></a>
@@ -211,9 +204,9 @@
       </div>
     </div>
   </div>
-    <hr width="600" size="500" class="horizontalTwo">
+  <hr width="600" size="500" class="horizontalTwo">
   <!--Google Race Map-->
-  <h1 class="raceHead">Race Map</h1>
+  <img src="images/racemaplogo.png" class="raceHead img-responsive center-block">
   <div class="container">
     <div class="col-sm-12">
       <div id="floating-panel">
@@ -239,9 +232,10 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <!--Top racers in the area-->
+  <div class="container topScores">
     <div class="row">
-      <h1 class="topracers">Top Racers</h1>
+      <img src="images/topracerslogo.png" class="center-block img-responsive topracers">
     </div>  
     <div class="row scoreboard">
       <div class="col-sm-4">
@@ -255,17 +249,17 @@
       </div>
       <div class="col-sm-4">
         <div class="statsTwo">
-          <img src="images/gtrstatpic.jpg" class="img-responsive gtrstat">
+          <img src="images/gtrstatpic.jpg" class="img-responsive">
           <div class="m4Style">
             <h3>Stats</h3>
-            <p class="viewTwo">Bob<br>Car: BMW M4<br>Tune: Stage 3<br>W/L: 14/3<br></p>
+            <p class="viewTwo">Bob<br>Car: R35 GT-R<br>Tune: Stage 3<br>W/L: 14/3<br></p>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="statsThree">
           <img src="images/libertywalkporsche.jpg" class="img-responsive">
-          <div class="carStyle">
+          <div class="porscheStyle">
             <h3>Stats</h3>
             <p class="viewThree">Speedy<br>Car: PORSCHE 911 GT4<br>Tune: Stage 3<br>W/L: 12/5<br></p>
           </div>
@@ -273,10 +267,12 @@
       </div>
     </div>
   </div>
+  <!--Social media section-->
+  <hr width="600" size="500" class="horizontalTwo">
   <div class="container socialmedia">
     <div class="row">
       <div class="col-sm-12">
-        <p class="followus">Follow us on social media!</p>
+        <img src="images/socialmedialogo.png" class="center-block followus">
       </div>
     </div>
     <div class="row socialicons">
