--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <div class="media">
           <div class="media-left media-top">
             <a href="http://www.instagram.com">
-              <i class="fa fa-instagram fa-5x instaicon"></i></a>2
+              <i class="fa fa-instagram fa-5x instaicon"></i></a>
             </a>
           </div>
           <div class="media-body">
